gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test19608.d
version https://git-lfs.github.com/spec/v1
oid sha256:70c389cd0366440d9962a808e807d5da57a06dd5c85a428a387a0a16d7932d88
size 302
